--- a/ecommerce-app/package.json
+++ b/ecommerce-app/package.json
@@ -25,8 +25,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.3.3",
-    "zod": "^3.23.8"
+    "typescript": "5.3.3"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.3.3",
